# c-ringbuf

./: .gitignore  CMakeLists.txt  GNUmakefile  Makefile  Makefile.am  README.md  README.org  configure.ac  libringbuf.pc.in  ringbuf-test.c  ringbuf.c  ringbuf.h
.github/: CONTRIBUTING.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
cmake/: ringbufConfig.cmake.in
